dumb change to test npm publish

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flatten-tweet",
-  "version": "0.0.4",
-  "description": "Make Twitter v2 API data easier to process",
+  "version": "0.0.5",
+  "description": "Make Twitter v2 API data a bit easier to process",
   "main": "index.js",
   "scripts": {
     "test": "mocha test.js"
